WIP Database implementation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Spencer Anders"]
 python = "^3.9"
 Flask = "^2.0.3"
 esipy = {url = "https://files.pythonhosted.org/packages/19/b8/a64d762e5dedbddc4981952caa3d3d1bcac3740435a7ff9de155c74ce4d2/EsiPy-1.2.2.tar.gz"}
+pymongo = "4.0.2"
 
 [tool.poetry.dev-dependencies]
 
